Fix J11 API incompability